feat(cleanup+refactor):annotations changed to repositrory according to record-manager; docker-compose uses spipes from ava;